--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
       <li class="dropdown">
         <a href="#">Services ▾</a>
         <ul class="dropdown-content">
-          <li><a href="#">Web Design</a></li>
+          <li><a href="original_styles.css">Web Design</a></li>
           <li><a href="#">SEO</a></li>
           <li><a href="#">Marketing</a></li>
         </ul>
       </li>
-      <li><a href="#">About</a></li>
+      <li><a href="aboutme.html">About</a></li>
       <li><a href="#">Contact</a></li>
     </ul>
   </nav>
