--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <li class="dropdown">
         <a href="#">Services ▾</a>
         <ul class="dropdown-content">
-          <li><a href="original_styles.css">Web Design</a></li>
+          <li><a href="orignal_index.html">Web Design</a></li>
           <li><a href="#">SEO</a></li>
           <li><a href="#">Marketing</a></li>
         </ul>
