--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <ul class="nav-links" id="nav-links">
       <li><a href="#">Home</a></li>
       <li class="dropdown">
-        <a href="#">Services ▾</a>
+        <a href="orignal_index.html">Services ▾</a>
         <ul class="dropdown-content">
           <li><a href="orignal_index.html">Web Design</a></li>
           <li><a href="#">SEO</a></li>
@@ -22,7 +22,7 @@
         </ul>
       </li>
       <li><a href="aboutme.html">About</a></li>
-      <li><a href="#">Contact</a></li>
+      <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
 
