added new photo and put onto index.html

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <h2>Written by Christopher Willey</h2>
     <section>
       <h3>Get your own copy</h3>
-      <img src="https://m.media-amazon.com/images/W/AVIF_800250-T1/images/I/71DQA4bdsIL._SY466_.jpg" alt="Book Cover" style="max-width:100%;" />
+      <img src="Photos/wwmsid_cover.jpg" alt="Book Cover" style="max-width:100%;" />
       <br />
       <a href="https://www.audible.ca/pd/What-Would-My-Scuba-Instructor-Do-Audiobook/B099WCHRFC" class="button">Buy on Audible</a>
       <a href="https://www.amazon.ca/What-Would-My-Scuba-Instructor-ebook/dp/B08QG22KCZ" class="button">Buy on Amazon</a>
