--- a/gallery.html
+++ b/gallery.html
@@ -45,6 +45,7 @@
     <a href="index.html">Home</a>
     <a href="store.html">Store</a>
     <a href="gallery.html">Gallery</a>
+    <a href="videos.html">Videos</a>
     <a href="aboutme.html">About</a>
     <a href="crypto.html">Crypto</a>
     <a href="contact.html">Contact</a>
