updated css java and deleted unused style

--- a/index.html
+++ b/index.html
@@ -11,15 +11,66 @@
   <header class="banner">
     <h1>What Would My Scuba Instructor Do?</h1>
   </header>
-  <nav class="nav-container">
-    <a href="index.html">Home</a>
-    <a href="store.html">Store</a>
-    <a href="gallery.html">Gallery</a>
-    <a href="videos.html">Videos</a>
-    <a href="aboutme.html">About</a>
-    <a href="crypto.html">Crypto</a>
-    <a href="contact.html">Contact</a>
+  <nav class="navbar">
+    <div class="hamburger" id="hamburger">&#9776;</div>
+    <ul class="nav-links" id="nav-links">
+
+      <li><a href="index.html">Home</a></li>
+
+      <!-- BOOK MENU -->
+      <li class="dropdown">
+        <a href="aboutme.html">Book ▾</a>
+        <ul class="dropdown-content">
+          <li><a href="aboutme.html">About the Book</a></li>
+          <li><a href="https://www.amazon.ca/What-Would-My-Scuba-Instructor-ebook/dp/B08QG22KCZ" target="_blank">Buy Now</a></li>
+          <li><a href="gallery.html">Gallery</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </li>
+
+      <!-- STORE MENU -->
+      <li class="dropdown">
+        <a href="store.html">Store ▾</a>
+        <ul class="dropdown-content">
+          <li><a href="store.html">Merchandise</a></li>
+          <li><a href="store.html#funko">Funko Pops</a></li>
+          <li><a href="store.html#zippo">Zippos</a></li>
+          <li><a href="store.html#shirts">Shirts</a></li>
+        </ul>
+      </li>
+
+      <!-- CRYPTO MENU -->
+      <li class="dropdown">
+        <a href="crypto.html">Crypto ▾</a>
+        <ul class="dropdown-content">
+          <li><a href="crypto.html">WWMSID Token Info</a></li>
+          <li><a href="crypto_buy.html">How to Buy</a></li>
+          <li><a href="crypto_tracker.html">Price Tracker</a></li>
+        </ul>
+      </li>
+
+      <!-- MEDIA MENU -->
+      <li class="dropdown">
+        <a href="videos.html">Media ▾</a>
+        <ul class="dropdown-content">
+          <li><a href="videos.html">Videos</a></li>
+          <li><a href="playlist.html">YouTube Playlist</a></li>
+          <li><a href="gallery.html">WWMSID Photos</a></li>
+        </ul>
+      </li>
+
+      <!-- ABOUT MENU -->
+      <li class="dropdown">
+        <a href="aboutme.html">About ▾</a>
+        <ul class="dropdown-content">
+          <li><a href="aboutme.html">About the Author</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </li>
+
+    </ul>
   </nav>
+
   <div class="content-container">
     <h2>News</h2>
     <section>
